# dvoacap-python

./: .dockerignore  .gitignore  ANALYSIS_GN55_IN25_COMPARISON.md  ANALYSIS_INDEX.md  AntennaModels.txt  CACHING_DEBUG.md  CHANGELOG.md  CHECKLIST.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_WIKI_AUDIT.md  CONTRIBUTING.md  DASHBOARD_DESIGN_RECOMMENDATIONS.md  DEBUG_QUICKSTART.md  DOCUMENTATION_CHECKLIST.md  DOCUMENTATION_GAP_ANALYSIS.md  DVOACAP_file_list.txt  FORTRAN_ANALYSIS_AND_RECOMMENDATIONS.md  FUTURE_FUNCTIONALITY_PLANNING.md  GENERATING_REFERENCE_DATA.md  GITHUB_RELEASE_v1.0.1.md  HTTP_CACHING_GUIDE.md  INVESTIGATION_NOTES.md  INVESTIGATION_SUMMARY_2025-11-14.md  KNOWN_ISSUES_CORRECTED.md  LICENSE  MANIFEST.in  MULTI_SOURCE_DATA.md  NEXT_STEPS.md  NOTICE  PHASE5_COMPLETION_STATUS.md  PHASE5_VALIDATION_REPORT.md  PROGRESS_REPORT.md  PR_113_TEMPLATE.md  PSKREPORTER_VALIDATION_REPORT.md  PYPI_RELEASE_GUIDE.md  PYPI_SETUP_GUIDE.md  README.md  REGRESSION_BASELINE_APPROACH.md  RELEASE_NOTES_v0.9.0.md  RELEASE_NOTES_v1.0.0.md  (+75 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: generate_validation_report.py  report_test_suite_status.py
.github/workflows/: docs.yml  publish.yml  tests.yml  validation.yml  wiki-sync.yml
Dashboard/: CHANGELOG_FIXES.md  DESIGN_ANALYSIS.md  Dockerfile  ENHANCED_GUIDE.txt  FIX_SUMMARY.md  ISSUE_MULTI_USER_WEB_APP.md  MOCKUPS_README.md  MOCKUP_FEEDBACK.md  PATCH_NOTES.txt  PROPAGATION_MAPS_README.md  QUICK_REFERENCE.txt  README.md  USER_MANUAL.md  WHATS_NEW.txt  antenna_config.json  dashboard.html  dashboard_enhanced.html  dashboard_mockup.html  dashboard_mockup_v2.html  docker-compose.yml  dvoacap_wrapper.py  dvoacap_wrapper.py.old  dxcc_entities.json  dxcc_summary.json  enhanced_predictions.json  generate_predictions.py  generate_propagation.py  generate_propagation_maps.py  generate_propagation_voacap.py  index.html  mockup_v1_regions.html  mockup_v2_heatmap.html  mockup_v3_hybrid.html  mockup_v4_maidenhead_grid.html  mode_presets.py  parse_adif.py  prop_charts.css  prop_charts.js  propagation_dashboard_tabbed.html  propagation_data.json  (+10 more)
Dashboard/archive/old_dashboards/: propagation_dashboard.html  propagation_dashboard_enhanced.html
Dashboard/archive/old_docs/: SUMMARY.txt  VOACAP_SETUP_GUIDE.txt
Dashboard/archive/old_generators/: generate_enhanced_predictions.py  generate_propagation_accurate.py
Python/: geomagnetic.py
SampleIO/: 18113766.out.txt  Readme.txt  equatorial_001.txt  input.json  input2.json  input3.json  input_equatorial_001.voa  input_long_001_antipodal.voa  input_long_002_australia.voa  input_medium_001_transatlantic.voa  input_medium_002_us_japan.voa  input_polar_001_arctic.voa  input_short_001_us_east.voa  input_short_002_europe.voa  input_solar_max_001.voa  input_solar_min_001.voa  long_001_antipodal.txt  long_002_australia.txt  medium_001_transatlantic.txt  medium_002_us_japan.txt  output.json  output.txt  philadelphia to london - medium transat - raw.out.txt  philadelphia to london - medium transat - total.out.txt  polar_001_arctic.txt  ref_equatorial_001.out  ref_long_001.out  ref_long_002.out  ref_medium_001.out  ref_medium_002.out  ref_polar_001.out  ref_short_001.out  ref_short_002.out  ref_solar_max_001.out  ref_solar_min_001.out  short_001_us_east.txt  short_002_europe.txt  solar_max_001.txt  solar_min_001.txt  voacapx.out
archive/: README.md
archive/investigations/: ABSORPTION_BUG_ANALYSIS.md  ALGORITHMIC_COMPONENTS.md  RELIABILITY_INVESTIGATION.md  SIGNAL_POWER_INVESTIGATION.md
archive/phase-reports/: PHASE3_COMPLETE.md
archive/weekly-reports/: WEEK_3_4_SYSTEMATIC_VALIDATION_COMPLETE.md
docs/: INTEGRATION.md  PHASE4_SUMMARY.md  README.md  REORGANIZATION_GUIDE.md  USAGE.md  make.ps1
docs/source/: api.rst  conf.py  examples.rst  index.rst  installation.rst  overview.rst  quickstart.rst
examples/: complete_prediction_example.py  integration_example.py  parser_example.py  phase2_integration_example.py  phase3_ionospheric_example.py  phase4_raytracing_example.py  phase5_signal_example.py
notebooks/: 01_basic_prediction.ipynb
reference/voacap_original/: MPATH.FOR
scripts/: sync-wiki.ps1  sync-wiki.sh
src/dvoacap/: __init__.py  antenna_gain.py  fourier_maps.py  geomagnetic.py  ionospheric_profile.py  layer_parameters.py  muf_calculator.py  noise_model.py  path_geometry.py  prediction_engine.py  reflectrix.py  solar.py  space_weather_sources.py  voacap_parser.py
src/original/: AntGain.pas  FrMaps.pas  IonoProf.pas  LICENSE_NOTE.txt  LayrParm.pas  MagFld.pas  MufCalc.pas  NoiseMdl.pas  PathGeom.pas  Reflx.pas  SinCos.pas  Sun.pas  VoaCapEng.pas  VoaTypes.pas
tests/: conftest.py  test_antenna_gain.py  test_geomagnetic.py  test_ionospheric.py  test_muf_calculator.py  test_noise_model.py  test_path_geometry.py  test_reference_validation.py  test_reflectrix.py  test_solar.py  test_space_weather.py  test_voacap_parser.py
wiki/: API-Reference.md  Architecture.md  Comparison-Guide.md  Contributing.md  Dashboard-Guide.md  Development-Setup.md  FAQ.md  Getting-Started.md  Home.md  Integration-Guide.md  Known-Issues.md  Performance-Tips.md  Propagation-Maps.md  Quick-Examples.md  README.md  Testing-Guide.md  Troubleshooting.md  Validation-Status.md
