[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dvoacap"
version = "1.0.1"
description = "Python port of DVOACAP HF propagation prediction engine with 86.6% validation accuracy and 2.3x performance boost"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Python Port Contributors"},
]
maintainers = [
    {name = "Joel Morin", email = "skyelaird@users.noreply.github.com"},
]
keywords = [
    "HF propagation",
    "ionosphere",
    "VOACAP",
    "amateur radio",
    "ham radio",
    "MUF",
    "radio propagation",
    "ionospheric prediction",
    "skywave",
    "HF radio"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dashboard = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "requests>=2.31.0",
]

dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

all = [
    "dvoacap[dashboard,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/skyelaird/dvoacap-python"
Documentation = "https://skyelaird.github.io/dvoacap-python/"
Repository = "https://github.com/skyelaird/dvoacap-python"
"Bug Tracker" = "https://github.com/skyelaird/dvoacap-python/issues"
"Original DVOACAP" = "https://github.com/VE3NEA/DVOACAP"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dvoacap*"]
exclude = ["original*"]

[tool.setuptools.package-data]
dvoacap = ["DVoaData/*.dat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/dvoacap"]
omit = ["*/tests/*", "*/examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
